# openvino.genai

./: .gitignore  CMakeLists.txt  CMakeSettings.json  launch.vs.json  run.bat
llm/chatglm_cpp/: CMakeLists.txt  chatglm-backup.cpp  chatglm.cpp  chatglm.cpp.bak
llm/chatglm_main/: CMakeLists.txt  chatglm.h  chatglm_func - Copy.cpp  chatglm_func.cpp  chatglm_main.cpp  chatglm_pybind.cpp
